Fixed IE z-index problem.

--- a/static/css/event/every-moment.less
+++ b/static/css/event/every-moment.less
@@ -791,36 +791,37 @@
         margin-left: 17px;
       }
     }
-    .spotlight {
-      display: block;
-      z-index: 1;
-      position: absolute;
-      right: 120px;
-      bottom: -230px;
-    }
-    .start-upload-button {
-      display: block;
-      z-index: 1000;
-      position: absolute;
-      right: 150px;
-      bottom: -200px;
-//      bottom: 100px;
-      width: 138px;
-      height: 138px;
-      background: url(/static/img/event/every-moment/home/step/upload-bt.png);
-    }
-    .upload-tip {
-      display: block;
-      z-index: 1;
-      position: absolute;
-      right: 150px;
-      bottom: -280px;
-//      bottom: 20px;
-      width: 138px;
-      height: 95px;
-      background: url(/static/img/event/every-moment/home/step/upload-bt-word.png);
-    }
   }
+}
+
+.spotlight {
+  display: block;
+  z-index: 100;
+  position: fixed;
+  right: 170px;
+  bottom: -230px;
+}
+.start-upload-button {
+  display: block;
+  z-index: 1000;
+  position: fixed;
+  right: 200px;
+  bottom: -200px;
+//      bottom: 100px;
+  width: 138px;
+  height: 138px;
+  background: url(/static/img/event/every-moment/home/step/upload-bt.png);
+}
+.upload-tip {
+  display: block;
+  z-index: 100;
+  position: fixed;
+  right: 200px;
+  bottom: -280px;
+//      bottom: 20px;
+  width: 138px;
+  height: 95px;
+  background: url(/static/img/event/every-moment/home/step/upload-bt-word.png);
 }
 
 #scroll-tip {
